# jrnlc

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md
core/: config.cc  core.cc  display.cc  entry.cc  help.cc  jrnlmanager.cc  parse.cc  show.cc  timestamp.cc
include/: config.h  display.h  entry.h  help.h  journal.h  jrnlmanager.h  parse.h  timestamp.h
man-pages/: jrnl.1  jrnlc.1
src/: a.out  main.cc
